--- a/test/index.html
+++ b/test/index.html
@@ -82,6 +82,21 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 #privateMessages img{max-width:200px;border-radius:8px;margin-top:5px;display:block}
 #privateMessages audio{max-width:240px;height:35px;margin-top:5px}
 
+/* Action Buttons in Header */
+.headerActionBtn {
+  background: none;
+  border: 1px solid rgba(255,255,255,0.1);
+  color: var(--muted);
+  padding: 4px 8px;
+  border-radius: 6px;
+  font-size: 11px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+#blockBtn.blocked { border-color: var(--accent); color: var(--accent); }
+#blockBtn.not-blocked { border-color: #ff3b30; color: #ff3b30; }
+#reportBtn { border-color: #eab308; color: #eab308; }
+
 /* NEW: Unread divider */
 .unread-divider{text-align:center;margin:10px 0;position:relative;display:flex;align-items:center;justify-content:center}
 .unread-divider span{background:#2a3942;padding:4px 12px;border-radius:12px;font-size:11px;color:var(--accent);z-index:1}
@@ -172,8 +187,9 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
       <button id="closePrivate" style="background:none;border:0;color:var(--accent);font-size:18px;cursor:pointer">⬅</button>
       <div style="font-weight:700" id="privateTitle">Private Chat</div>
       <div style="flex:1"></div>
-      <button id="callBtn" style="background:none;border:0;color:var(--accent);cursor:pointer;font-weight:700">📞</button>
-      <button id="blockBtn" style="background:none;border:0;color:#ff3b30;cursor:pointer;font-weight:700">🚫</button>
+      <button id="callBtn" style="background:none;border:0;color:var(--accent);cursor:pointer;font-weight:700;margin-right:10px">📞</button>
+      <button id="blockBtn" class="headerActionBtn not-blocked">Block</button>
+      <button id="reportBtn" class="headerActionBtn" style="margin-left:8px">Report</button>
     </div>
     <div id="privateMessages"></div>
     <div id="typingPrivate" class="small"></div>
@@ -229,7 +245,7 @@ const panelEl = document.getElementById('panel'), panelListEl = document.getElem
 const clearHistoryBtn = document.getElementById('clearHistoryBtn');
 const messagesEl = document.getElementById('messages'), messageInput = document.getElementById('messageInput'), sendBtn = document.getElementById('sendBtn'), statusLine = document.getElementById('statusLine'), onlineCountEl = document.getElementById('onlineCount'), toastEl = document.getElementById('toast');
 const loginWrap = document.getElementById('loginWrap'), nameInput = document.getElementById('nameInput'), joinBtn = document.getElementById('joinBtn');
-const privatePopup = document.getElementById('privatePopup'), privateTitle = document.getElementById('privateTitle'), privateMessages = document.getElementById('privateMessages'), privateInput = document.getElementById('privateInput'), privateSend = document.getElementById('privateSend'), closePrivate = document.getElementById('closePrivate'), callBtn = document.getElementById('callBtn'), blockBtn = document.getElementById('blockBtn');
+const privatePopup = document.getElementById('privatePopup'), privateTitle = document.getElementById('privateTitle'), privateMessages = document.getElementById('privateMessages'), privateInput = document.getElementById('privateInput'), privateSend = document.getElementById('privateSend'), closePrivate = document.getElementById('closePrivate'), callBtn = document.getElementById('callBtn'), blockBtn = document.getElementById('blockBtn'), reportBtn = document.getElementById('reportBtn');
 const callOverlay = document.getElementById('callOverlay'), callFrom = document.getElementById('callFrom'), acceptCallBtn = document.getElementById('acceptCallBtn'), declineCallBtn = document.getElementById('declineCallBtn'), ringtone = document.getElementById('ringtone'), inCallBar = document.getElementById('inCallBar'), inCallWith = document.getElementById('inCallWith'), inCallElapsed = document.getElementById('inCallElapsed'), endCallBtn = document.getElementById('endCallBtn'), dingAudio = document.getElementById('dingAudio');
 const settingsBtn = document.getElementById('settingsBtn'), settingsPanel = document.getElementById('settingsPanel'), toggleCall = document.getElementById('toggleCall'), toggleCallKnob = document.getElementById('toggleCallKnob'), togglePrivate = document.getElementById('togglePrivate'), togglePrivateKnob = document.getElementById('togglePrivateKnob'), profileImgInput = document.getElementById('profileImgInput');
 const privImgFile = document.getElementById('privImgFile'), micBtn = document.getElementById('micBtn');
@@ -425,7 +441,6 @@ async function refreshPanelList(){
 }
 
 clearHistoryBtn.onclick = async () => {
-  if(!confirm("Clear all notifications?")) return;
   await db.ref(`unread/${username}`).remove();
   showToast("Notifications cleared");
   refreshPanelList();
@@ -436,16 +451,18 @@ async function openPrivatePopup(other){
   privateChatWith = other; privatePopup.style.display = 'flex';
   privateMessages.innerHTML = ''; privateTitle.textContent = `Chat with ${other}`;
   
+  const isBlocked = blockedUsers.has(other);
+  blockBtn.textContent = isBlocked ? 'Unblock' : 'Block';
+  blockBtn.className = 'headerActionBtn ' + (isBlocked ? 'blocked' : 'not-blocked');
+
   const key = chatId(username, other);
   
   // Mark all existing messages from "other" as read
   const snapshot = await db.ref(`privateChats/${key}`).once('value');
-  let unreadCount = 0;
   snapshot.forEach(child => {
     const m = child.val();
     if(m.name === other && !m.read) {
         db.ref(`privateChats/${key}/${child.key}`).update({read: true});
-        unreadCount++;
     }
   });
 
@@ -453,12 +470,10 @@ async function openPrivatePopup(other){
   if(currentPrivateRef) currentPrivateRef.off();
   renderedPrivateMsgIds.set(key, new Set());
   
-  // Handle Divider logic
   let dividerAdded = false;
   currentPrivateRef = db.ref(`privateChats/${key}`).limitToLast(50);
   currentPrivateRef.on('child_added', snap => {
     const msg = snap.val();
-    // Show divider before the first unread message if it's from the other person
     if(!dividerAdded && msg.name === other && !msg.read) {
         const div = document.createElement('div'); div.className='unread-divider';
         div.innerHTML = `<span>New Messages</span>`;
@@ -466,7 +481,6 @@ async function openPrivatePopup(other){
         dividerAdded = true;
     }
     renderPrivateMessageWithId(key, snap.key, msg);
-    // Mark as read if it arrives while open
     if(msg.name === other && !msg.read) db.ref(`privateChats/${key}/${snap.key}`).update({read: true});
   });
 
@@ -546,10 +560,34 @@ function cleanupCall(){
   ringtone.pause(); ringtone.currentTime=0; callOverlay.style.display='none'; inCallBar.style.display='none'; clearInterval(callTimerInterval); activeCall = null;
 }
 
-function listenBlocks(){ db.ref(`blocks/${username}`).on('value', s => blockedUsers = new Set(Object.keys(s.val()||{}))); }
+function listenBlocks(){ 
+  db.ref(`blocks/${username}`).on('value', s => {
+    blockedUsers = new Set(Object.keys(s.val()||{}));
+    if(privateChatWith) {
+      const isBlocked = blockedUsers.has(privateChatWith);
+      blockBtn.textContent = isBlocked ? 'Unblock' : 'Block';
+      blockBtn.className = 'headerActionBtn ' + (isBlocked ? 'blocked' : 'not-blocked');
+    }
+  }); 
+}
+
 blockBtn.onclick = () => {
   const ref = db.ref(`blocks/${username}/${privateChatWith}`);
-  ref.once('value', s => { if(s.exists()) ref.remove(); else ref.set(true); });
+  ref.once('value', s => { 
+    if(s.exists()) {
+      ref.remove(); 
+      showToast(`${privateChatWith} unblocked`);
+    } else {
+      ref.set(true); 
+      showToast(`${privateChatWith} blocked`);
+    }
+  });
+};
+
+reportBtn.onclick = () => {
+  showToast(`User ${privateChatWith} reported to admins.`);
+  // Log report to database if needed
+  db.ref('reports').push({ by: username, reported: privateChatWith, time: Date.now() });
 };
 
 profileImgInput.onchange = function(){
