--- a/test2/index.html
+++ b/test2/index.html
@@ -38,7 +38,7 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 .avatar{width:36px;height:36px;border-radius:50%;background:#000;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;margin:0 8px;position:relative;cursor:pointer;border:2px solid transparent;transition:border .18s ease-in-out;overflow:hidden}
 .avatar.online{border-color:var(--accent);box-shadow:0 0 0 0 rgba(37,211,102,.6);animation:pulse 1.5s infinite}
 @keyframes pulse{0%{box-shadow:0 0 0 0 rgba(37,211,102,.6)}70%{box-shadow:0 0 0 6px rgba(37,211,102,0)}100%{box-shadow:0 0 0 0 rgba(37,211,102,0)}}
-.bubble{background:var(--panel);padding:8px 12px;border-radius:12px;font-size:14px;line-height:1.3;word-break:break-word;cursor:pointer;position:relative;}
+.bubble{background:var(--panel);padding:8px 12px;border-radius:12px;font-size:14px;line-height:1.3;word-break:break-word;cursor:pointer}
 .msg-row.self .bubble{background:#005c4b}
 .meta{font-size:12px;color:#53bdeb;margin-bottom:4px;display:flex;align-items:center;gap:8px}
 .time{font-size:11px;color:var(--muted);margin-top:6px;text-align:right;display:flex;align-items:center;justify-content:flex-end;gap:4px}
@@ -48,11 +48,7 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 #inputBar{display:flex;padding:10px;background:var(--panel);align-items:center;gap:8px}
 #messageInput{flex:1;padding:10px;border-radius:22px;border:0;background:#2a3942;color:#fff;outline:none;font-size:14px}
 #sendBtn, .emojiToggle{width:44px;height:44px;border-radius:50%;border:0;background:var(--accent);color:#fff;font-size:18px;cursor:pointer}
-.emojiToggle{background:#2a3942; font-size: 20px;}
-
-#statusLine{padding:6px 12px;font-size:13px;color:var(--muted);background:#071215}
-#toast{position:fixed;left:50%;transform:translateX(-50%);bottom:24px;background:#2a3942;color:#fff;padding:10px 14px;border-radius:10px;z-index:999;opacity:0;transition:opacity .25s,bottom .25s}
-#toast.show{opacity:1;bottom:40px}
+.emojiToggle{background:#2a3942;font-size:20px}
 
 /* EMOJI PICKER STYLE */
 .emoji-picker {
@@ -62,6 +58,10 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 }
 .emoji-picker span { cursor: pointer; padding: 5px; font-size: 20px; transition: transform 0.1s; }
 .emoji-picker span:hover { transform: scale(1.2); }
+
+#statusLine{padding:6px 12px;font-size:13px;color:var(--muted);background:#071215}
+#toast{position:fixed;left:50%;transform:translateX(-50%);bottom:24px;background:#2a3942;color:#fff;padding:10px 14px;border-radius:10px;z-index:999;opacity:0;transition:opacity .25s,bottom .25s}
+#toast.show{opacity:1;bottom:40px}
 
 /* LOGIN */
 #loginWrap{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.6);z-index:999}
@@ -83,7 +83,7 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 .card{background:#0b141a;padding:12px;border-radius:12px;max-width:680px;width:96%;display:flex;flex-direction:column;max-height:92%}
 #privateHeader{display:flex;align-items:center;gap:8px;margin-bottom:8px}
 #privateMessages{flex:1;overflow:auto;padding:8px;background:#071215;border-radius:8px;display:flex;flex-direction:column;gap:8px}
-.private-bubble{background:#162027;padding:8px 10px;border-radius:10px;max-width:80%;cursor:pointer;}
+.private-bubble{background:#162027;padding:8px 10px;border-radius:10px;max-width:80%;cursor:pointer}
 .private-row.self{align-self:flex-end}
 #privateInputBar{display:flex;gap:8px;margin-top:8px;align-items:center}
 #privateInput{flex:1;padding:10px;border-radius:22px;border:0;background:#2a3942;color:#fff}
@@ -207,9 +207,7 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
     </div>
     <div id="privateMessages"></div>
     <div id="typingPrivate" class="small"></div>
-    <div class="emoji-picker" id="privateEmojiPicker"></div>
     <div id="privateInputBar">
-      <button class="mediaBtn" id="privateEmojiBtn">😊</button>
       <input type="file" id="privImgFile" accept="image/*" style="display:none">
       <button class="mediaBtn" onclick="document.getElementById('privImgFile').click()" title="Send Image">📷</button>
       <button class="mediaBtn" id="micBtn" title="Voice Message (Max 10s)">🎤</button>
@@ -267,10 +265,8 @@ function initEmojiPicker(container, input) {
   });
 }
 initEmojiPicker(document.getElementById('emojiPicker'), document.getElementById('messageInput'));
-initEmojiPicker(document.getElementById('privateEmojiPicker'), document.getElementById('privateInput'));
 
 document.getElementById('groupEmojiBtn').onclick = (e) => { e.stopPropagation(); const p = document.getElementById('emojiPicker'); p.style.display = p.style.display === 'grid' ? 'none' : 'grid'; };
-document.getElementById('privateEmojiBtn').onclick = (e) => { e.stopPropagation(); const p = document.getElementById('privateEmojiPicker'); p.style.display = p.style.display === 'grid' ? 'none' : 'grid'; };
 
 /* DOM & STATE */
 const panelEl = document.getElementById('panel'), panelListEl = document.getElementById('panelList'), panelCloseBtn = document.getElementById('panelClose'), bellBtn = document.getElementById('bellBtn'), bellBadge = document.getElementById('bellBadge');
@@ -353,7 +349,7 @@ function deleteGroupMsg(key) {
   if(confirm("Delete this message for everyone?")) db.ref(`messages/${key}`).remove();
 }
 function deletePrivateMsg(chatKey, msgId) {
-  if(confirm("Delete this message?")) db.ref(`privateChats/${chatKey}/${msgId}`).remove();
+  if(confirm("Delete this message for everyone?")) db.ref(`privateChats/${chatKey}/${msgId}`).remove();
 }
 
 /* SETTINGS LOGIC */
@@ -368,7 +364,8 @@ applySettingsToUI();
 settingsBtn.onclick = (e) => { e.stopPropagation(); settingsPanel.style.display = settingsPanel.style.display === 'block' ? 'none' : 'block'; };
 document.addEventListener('click', (e) => { 
   if(!settingsPanel.contains(e.target)) settingsPanel.style.display = 'none'; 
-  document.querySelectorAll('.emoji-picker').forEach(p => { if(!e.target.classList.contains('emojiToggle') && !e.target.classList.contains('mediaBtn')) p.style.display='none'; });
+  const picker = document.getElementById('emojiPicker');
+  if(!e.target.classList.contains('emojiToggle') && !picker.contains(e.target)) picker.style.display='none';
 });
 toggleCall.onclick = () => { settings.audioCall = !settings.audioCall; applySettingsToUI(); };
 togglePrivate.onclick = () => { settings.privateChat = !settings.privateChat; applySettingsToUI(); };
@@ -466,6 +463,8 @@ function attachPrivateListener(chatKey){
 
   privateListeners.set(chatKey, { ref: chatRef, handler });
 }
+
+function listenUnreadAndPanel(){ listenUnreadForMe(); refreshPanelList(); }
 
 function listenUnreadForMe(){
   db.ref(`unread/${username}`).on('value', snap => {
