--- a/test2/index.html
+++ b/test2/index.html
@@ -460,7 +460,29 @@ async function refreshPanelList(){
   });
 }
 
-clearHistoryBtn.onclick = async () => { await db.ref(`unread/${username}`).remove(); showToast("Notifications cleared"); refreshPanelList(); };
+/* FIXED CLEAR HISTORY LOGIC */
+clearHistoryBtn.onclick = async () => { 
+  if(!confirm("Are you sure? This will delete all your private messages from the server.")) return;
+  
+  // 1. Clear unread counters
+  await db.ref(`unread/${username}`).remove(); 
+  
+  // 2. Clear all messages in private chat rooms you are part of
+  const allChatsSnap = await db.ref('privateChats').once('value');
+  const allChats = allChatsSnap.val() || {};
+  
+  const deletePromises = [];
+  Object.keys(allChats).forEach(chatKey => {
+    if(chatKey.includes(username)) {
+      // Deletes the actual message data in Firebase
+      deletePromises.push(db.ref(`privateChats/${chatKey}`).remove());
+    }
+  });
+  
+  await Promise.all(deletePromises);
+  showToast("Chat history fully cleared"); 
+  refreshPanelList(); 
+};
 
 async function openPrivatePopup(other){
   if(!settings.privateChat) return showToast('Private chat disabled');
