--- a/test/index.html
+++ b/test/index.html
@@ -72,7 +72,7 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 .card{background:#0b141a;padding:12px;border-radius:12px;max-width:680px;width:96%;display:flex;flex-direction:column;max-height:92%}
 #privateHeader{display:flex;align-items:center;gap:8px;margin-bottom:8px}
 #privateMessages{flex:1;overflow:auto;padding:8px;background:#071215;border-radius:8px;display:flex;flex-direction:column;gap:8px}
-.private-bubble{background:#162027;padding:8px 10px;border-radius:10px;max-width:80%}
+.private-bubble{background:#162027;padding:8px 10px;border-radius:10px;max-width:80%;cursor:pointer}
 .private-row.self{align-self:flex-end}
 #privateInputBar{display:flex;gap:8px;margin-top:8px;align-items:center}
 #privateInput{flex:1;padding:10px;border-radius:22px;border:0;background:#2a3942;color:#fff}
@@ -87,17 +87,13 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
   background: none;
   border: 1px solid rgba(255,255,255,0.1);
   color: var(--muted);
-  padding: 4px 8px;
-  border-radius: 6px;
-  font-size: 11px;
-  cursor: pointer;
-  transition: all 0.2s;
+  padding: 4px 8px; border-radius: 6px; font-size: 11px; cursor: pointer; transition: all 0.2s;
 }
 #blockBtn.blocked { border-color: var(--accent); color: var(--accent); }
 #blockBtn.not-blocked { border-color: #ff3b30; color: #ff3b30; }
 #reportBtn { border-color: #eab308; color: #eab308; }
 
-/* NEW: Unread divider */
+/* UNREAD DIVIDER */
 .unread-divider{text-align:center;margin:10px 0;position:relative;display:flex;align-items:center;justify-content:center}
 .unread-divider span{background:#2a3942;padding:4px 12px;border-radius:12px;font-size:11px;color:var(--accent);z-index:1}
 .unread-divider::after{content:'';position:absolute;left:0;right:0;height:1px;background:rgba(255,255,255,0.1)}
@@ -114,6 +110,15 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 #inCallBar{position:fixed;left:50%;transform:translateX(-50%);bottom:22px;background:rgba(0,0,0,.6);padding:8px 12px;border-radius:20px;color:#fff;display:none;z-index:10001;align-items:center;gap:10px}
 #endCallBtn{background:#ff3b30;border:0;color:#fff;padding:8px 12px;border-radius:12px;cursor:pointer}
 
+/* CUSTOM CONFIRM DELETE MODAL */
+#deleteModal{position:fixed;inset:0;background:rgba(0,0,0,0.8);z-index:10001;display:none;align-items:center;justify-content:center}
+.deleteCard{background:#202c33;padding:24px;border-radius:16px;width:300px;text-align:left;box-shadow:0 10px 30px rgba(0,0,0,0.5)}
+.deleteCard h3{margin:0 0 16px 0;font-size:16px;font-weight:400;color:#e9edef}
+.deleteBtns{display:flex;justify-content:flex-end;gap:20px}
+.deleteBtns button{background:none;border:none;font-weight:600;font-size:14px;cursor:pointer;padding:8px;text-transform:uppercase}
+#cancelDel{color:var(--accent)}
+#confirmDel{color:var(--accent)}
+
 @media(max-width:600px){
   #panel{width:100%} 
   #settingsPanel {position: fixed; right: 10px; left: 10px; top: 60px; min-width: auto;}
@@ -121,6 +126,16 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 </style>
 </head>
 <body>
+
+<div id="deleteModal">
+  <div class="deleteCard">
+    <h3 id="deleteTitle">Delete this message for everyone?</h3>
+    <div class="deleteBtns">
+      <button id="cancelDel">Cancel</button>
+      <button id="confirmDel">Delete for everyone</button>
+    </div>
+  </div>
+</div>
 
 <div id="panel" aria-hidden="true">
   <div class="panelHeader">
@@ -250,16 +265,26 @@ const callOverlay = document.getElementById('callOverlay'), callFrom = document.
 const settingsBtn = document.getElementById('settingsBtn'), settingsPanel = document.getElementById('settingsPanel'), toggleCall = document.getElementById('toggleCall'), toggleCallKnob = document.getElementById('toggleCallKnob'), togglePrivate = document.getElementById('togglePrivate'), togglePrivateKnob = document.getElementById('togglePrivateKnob'), profileImgInput = document.getElementById('profileImgInput');
 const privImgFile = document.getElementById('privImgFile'), micBtn = document.getElementById('micBtn');
 
+const deleteModal = document.getElementById('deleteModal'), confirmDel = document.getElementById('confirmDel'), cancelDel = document.getElementById('cancelDel');
+
 let username = localStorage.getItem('guestName') || '';
 let profileImage = localStorage.getItem('profileImage') || '';
 let blockedUsers = new Set();
 let currentGroupRef = null, currentPrivateRef = null, privateChatWith = null, typingTimer = null, privateTypingTimer = null;
 const privateListeners = new Map(), renderedPrivateMsgIds = new Map();
-let activeCall = null, callTimerInterval = null;
+let activeCall = null, callTimerInterval = null, currentDeleteAction = null;
 const SETTINGS_KEY = 'chat_settings_v1';
 let settings = JSON.parse(localStorage.getItem(SETTINGS_KEY) || '{}');
 if(typeof settings.audioCall === 'undefined') settings.audioCall = true;
 if(typeof settings.privateChat === 'undefined') settings.privateChat = true;
+
+/* CUSTOM DELETE LOGIC */
+function openDeletePrompt(action) {
+  currentDeleteAction = action;
+  deleteModal.style.display = 'flex';
+}
+confirmDel.onclick = () => { if(currentDeleteAction) currentDeleteAction(); deleteModal.style.display = 'none'; };
+cancelDel.onclick = () => { deleteModal.style.display = 'none'; currentDeleteAction = null; };
 
 /* VOICE & MEDIA ADDITIONS */
 let mediaRecorder, audioChunks = [], recordTimer;
@@ -350,6 +375,7 @@ function startGroupListeners(){
   if(currentGroupRef) currentGroupRef.off(); messagesEl.innerHTML = '';
   currentGroupRef = db.ref('messages').limitToLast(50);
   currentGroupRef.on('child_added', snap => renderGroupMessage(snap.val(), snap.key));
+  currentGroupRef.on('child_removed', snap => { const el = document.querySelector(`[data-key="${snap.key}"]`); if(el) el.remove(); });
 }
 
 function renderGroupMessage(data, key){
@@ -363,6 +389,7 @@ function renderGroupMessage(data, key){
   const content=document.createElement('div'); content.style.display='flex'; content.style.flexDirection='column';
   const meta=document.createElement('div'); meta.className='meta'; meta.textContent=data.name;
   const bubble=document.createElement('div'); bubble.className='bubble'; bubble.textContent=data.text;
+  if(isSelf) bubble.onclick = () => openDeletePrompt(() => db.ref(`messages/${key}`).remove());
   const t=document.createElement('div'); t.className='time'; t.textContent=formatTime(data.time);
   content.append(meta,bubble,t); row.append(avatar,content); messagesEl.appendChild(row); scrollToBottomSoon(messagesEl);
 }
@@ -393,27 +420,20 @@ function watchPrivateChatsInitial(){
 function attachPrivateListener(chatKey){
   if(privateListeners.has(chatKey)) return;
   const chatRef = db.ref(`privateChats/${chatKey}`);
-  
-  // Watch for new messages to trigger bell/unread
   const handler = chatRef.limitToLast(1).on('child_added', snap => {
     const msg = snap.val(); if(!msg || msg.name === username) return;
     const other = chatKey.split('_').find(x=>x!==username);
     if(privateChatWith === other && privatePopup.style.display === 'flex') {
-       // If chat open, mark as read immediately
        if(!msg.read) db.ref(`privateChats/${chatKey}/${snap.key}`).update({read: true});
-    } else {
-       bellFlash();
-    }
+    } else { bellFlash(); }
     refreshPanelList();
   });
-  
-  // Watch for "read" status changes so sender sees blue checks
   chatRef.on('child_changed', snap => {
     const msg = snap.val();
     const msgEl = document.querySelector(`[data-msgid="${snap.key}"] .read-status`);
     if(msgEl && msg.read) msgEl.classList.add('read');
   });
-
+  chatRef.on('child_removed', snap => { const el = document.querySelector(`[data-msgid="${snap.key}"]`); if(el) el.remove(); });
   privateListeners.set(chatKey, { ref: chatRef, handler });
 }
 
@@ -440,36 +460,40 @@ async function refreshPanelList(){
   });
 }
 
-clearHistoryBtn.onclick = async () => {
-  await db.ref(`unread/${username}`).remove();
-  showToast("Notifications cleared");
-  refreshPanelList();
+/* MODIFIED CLEAR HISTORY - NO CONFIRMATION DIALOGUE */
+clearHistoryBtn.onclick = async () => { 
+  // 1. Clear unread counters
+  await db.ref(`unread/${username}`).remove(); 
+  
+  // 2. Clear all messages in private chat rooms you are part of
+  const allChatsSnap = await db.ref('privateChats').once('value');
+  const allChats = allChatsSnap.val() || {};
+  
+  const deletePromises = [];
+  Object.keys(allChats).forEach(chatKey => {
+    if(chatKey.includes(username)) {
+      deletePromises.push(db.ref(`privateChats/${chatKey}`).remove());
+    }
+  });
+  
+  await Promise.all(deletePromises);
+  showToast("Chat history cleared"); 
+  refreshPanelList(); 
 };
 
 async function openPrivatePopup(other){
   if(!settings.privateChat) return showToast('Private chat disabled');
   privateChatWith = other; privatePopup.style.display = 'flex';
   privateMessages.innerHTML = ''; privateTitle.textContent = `Chat with ${other}`;
-  
   const isBlocked = blockedUsers.has(other);
   blockBtn.textContent = isBlocked ? 'Unblock' : 'Block';
   blockBtn.className = 'headerActionBtn ' + (isBlocked ? 'blocked' : 'not-blocked');
-
   const key = chatId(username, other);
-  
-  // Mark all existing messages from "other" as read
   const snapshot = await db.ref(`privateChats/${key}`).once('value');
-  snapshot.forEach(child => {
-    const m = child.val();
-    if(m.name === other && !m.read) {
-        db.ref(`privateChats/${key}/${child.key}`).update({read: true});
-    }
-  });
-
+  snapshot.forEach(child => { const m = child.val(); if(m.name === other && !m.read) db.ref(`privateChats/${key}/${child.key}`).update({read: true}); });
   db.ref(`unread/${username}/${other}`).set(0);
   if(currentPrivateRef) currentPrivateRef.off();
   renderedPrivateMsgIds.set(key, new Set());
-  
   let dividerAdded = false;
   currentPrivateRef = db.ref(`privateChats/${key}`).limitToLast(50);
   currentPrivateRef.on('child_added', snap => {
@@ -477,33 +501,26 @@ async function openPrivatePopup(other){
     if(!dividerAdded && msg.name === other && !msg.read) {
         const div = document.createElement('div'); div.className='unread-divider';
         div.innerHTML = `<span>New Messages</span>`;
-        privateMessages.appendChild(div);
-        dividerAdded = true;
+        privateMessages.appendChild(div); dividerAdded = true;
     }
     renderPrivateMessageWithId(key, snap.key, msg);
     if(msg.name === other && !msg.read) db.ref(`privateChats/${key}/${snap.key}`).update({read: true});
   });
-
   panelEl.classList.remove('open'); document.getElementById('app').style.transform = '';
 }
 
 function renderPrivateMessageWithId(chatKey, id, msg){
   let set = renderedPrivateMsgIds.get(chatKey); if(!set) { set = new Set(); renderedPrivateMsgIds.set(chatKey, set); }
   if(set.has(id)) return; set.add(id);
-  
   const isSelf = msg.name === username;
-  const row = document.createElement('div'); 
-  row.className = 'private-row ' + (isSelf?'self':'');
-  row.dataset.msgid = id;
-
+  const row = document.createElement('div'); row.className = 'private-row ' + (isSelf?'self':''); row.dataset.msgid = id;
   let bodyContent = `<div class="private-bubble">${msg.text || ''}</div>`;
   if(msg.image) bodyContent = `<div class="private-bubble"><img src="${msg.image}" style="max-width:100%;border-radius:8px"></div>`;
   if(msg.voice) bodyContent = `<div class="private-bubble"><audio controls src="${msg.voice}" style="height:34px;width:200px"></audio></div>`;
-  
   const readClass = msg.read ? 'read' : '';
   const statusHtml = isSelf ? `<span class="read-status ${readClass}">✓✓</span>` : '';
-  
   row.innerHTML = `${bodyContent}<div class="time">${formatTime(msg.time)} ${statusHtml}</div>`;
+  if(isSelf) row.querySelector('.private-bubble').onclick = () => openDeletePrompt(() => db.ref(`privateChats/${chatKey}/${id}`).remove());
   privateMessages.appendChild(row); scrollToBottomSoon(privateMessages);
 }
 
@@ -518,7 +535,6 @@ privateSend.onclick = () => {
 closePrivate.onclick = () => { privatePopup.style.display='none'; privateChatWith=null; if(currentPrivateRef) currentPrivateRef.off(); };
 bellBtn.onclick = () => { panelEl.classList.toggle('open'); const isOpen = panelEl.classList.contains('open'); document.getElementById('app').style.transform = isOpen ? `translateX(-${panelEl.offsetWidth}px)` : ''; };
 panelCloseBtn.onclick = () => { panelEl.classList.remove('open'); document.getElementById('app').style.transform = ''; };
-
 function bellFlash(){ try{dingAudio.play();}catch(e){} }
 
 /* CALLS */
@@ -541,11 +557,9 @@ callBtn.onclick = () => {
   db.ref(`calls/${id}`).set({ from:username, to:privateChatWith, status:'ringing', startedAt:Date.now() });
   activeCall = { id }; callOverlay.style.display='flex'; callFrom.textContent=privateChatWith; ringtone.play();
 };
-
 acceptCallBtn.onclick = () => db.ref(`calls/${activeCall.id}`).update({ status:'answered', answeredAt:Date.now() });
 declineCallBtn.onclick = () => { db.ref(`calls/${activeCall.id}`).update({ status:'declined' }); cleanupCall(); };
 endCallBtn.onclick = () => { db.ref(`calls/${activeCall.id}`).update({ status:'ended' }); cleanupCall(); };
-
 function startInCallTimer(c){
   ringtone.pause(); callOverlay.style.display='none'; inCallBar.style.display='flex'; inCallWith.textContent = c.from === username ? c.to : c.from;
   clearInterval(callTimerInterval);
@@ -555,10 +569,7 @@ function startInCallTimer(c){
     inCallElapsed.textContent = `${m}:${s}`;
   }, 1000);
 }
-
-function cleanupCall(){
-  ringtone.pause(); ringtone.currentTime=0; callOverlay.style.display='none'; inCallBar.style.display='none'; clearInterval(callTimerInterval); activeCall = null;
-}
+function cleanupCall(){ ringtone.pause(); ringtone.currentTime=0; callOverlay.style.display='none'; inCallBar.style.display='none'; clearInterval(callTimerInterval); activeCall = null; }
 
 function listenBlocks(){ 
   db.ref(`blocks/${username}`).on('value', s => {
@@ -570,26 +581,14 @@ function listenBlocks(){
     }
   }); 
 }
-
 blockBtn.onclick = () => {
   const ref = db.ref(`blocks/${username}/${privateChatWith}`);
   ref.once('value', s => { 
-    if(s.exists()) {
-      ref.remove(); 
-      showToast(`${privateChatWith} unblocked`);
-    } else {
-      ref.set(true); 
-      showToast(`${privateChatWith} blocked`);
-    }
+    if(s.exists()) { ref.remove(); showToast(`${privateChatWith} unblocked`); } 
+    else { ref.set(true); showToast(`${privateChatWith} blocked`); }
   });
 };
-
-reportBtn.onclick = () => {
-  showToast(`User ${privateChatWith} reported to admins.`);
-  // Log report to database if needed
-  db.ref('reports').push({ by: username, reported: privateChatWith, time: Date.now() });
-};
-
+reportBtn.onclick = () => { showToast(`User ${privateChatWith} reported to admins.`); db.ref('reports').push({ by: username, reported: privateChatWith, time: Date.now() }); };
 profileImgInput.onchange = function(){
   const file = this.files[0]; if(!file) return;
   const reader = new FileReader();
@@ -599,7 +598,6 @@ profileImgInput.onchange = function(){
     showToast('Profile updated');
   }; reader.readAsDataURL(file);
 };
-
 window.onbeforeunload = () => { if(username){ db.ref(`status/${username}`).remove(); db.ref(`profiles/${username}/online`).remove(); } };
 </script>
 </body>
